--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "firebase": "^8.6.8",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
@@ -18,7 +20,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
